kuber/3.3/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: app
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
  selector:
    app: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: app
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
  selector:
    app: backend
---
apiVersion: v1
kind: Service
metadata:
  name: cache-svc
  namespace: app
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
  selector:
    app: cache
---
